ApexWorkbook/src/objects/Case__x.object
<CustomObject>
    <externalDataSource>Salesforcesimple</externalDataSource>
    <externalName>Case</externalName>
    <fields>
        <fullName>AccountId__c</fullName>
        <externalDeveloperName>AccountId</externalDeveloperName>
        <label>Account ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Customer_Feedback_c__c</fullName>
        <externalDeveloperName>Additional_Customer_Feedback__c</externalDeveloperName>
        <label>Additional_Customer Feedback</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AssetId__c</fullName>
        <externalDeveloperName>AssetId</externalDeveloperName>
        <label>Asset ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Browser_c__c</fullName>
        <externalDeveloperName>Browser__c</externalDeveloperName>
        <label>Browser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessHoursId__c</fullName>
        <externalDeveloperName>BusinessHoursId</externalDeveloperName>
        <label>Business Hours ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Area_c__c</fullName>
        <externalDeveloperName>Case_Area__c</externalDeveloperName>
        <label>Case Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Routing_c__c</fullName>
        <externalDeveloperName>Case_Routing__c</externalDeveloperName>
        <label>Case Routing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClosedDate__c</fullName>
        <externalDeveloperName>ClosedDate</externalDeveloperName>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CommunityId__c</fullName>
        <externalDeveloperName>CommunityId</externalDeveloperName>
        <label>Zone ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectionReceivedId__c</fullName>
        <externalDeveloperName>ConnectionReceivedId</externalDeveloperName>
        <label>Received Connection ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectionSentId__c</fullName>
        <externalDeveloperName>ConnectionSentId</externalDeveloperName>
        <label>Sent Connection ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <externalDeveloperName>ContactId</externalDeveloperName>
        <label>Contact ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_c__c</fullName>
        <externalDeveloperName>Cost__c</externalDeveloperName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CreatorFullPhotoUrl__c</fullName>
        <externalDeveloperName>CreatorFullPhotoUrl</externalDeveloperName>
        <label>Url of Creator&apos;s Profile Photo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatorName__c</fullName>
        <externalDeveloperName>CreatorName</externalDeveloperName>
        <label>Name of Creator</label>
        <length>121</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatorSmallPhotoUrl__c</fullName>
        <externalDeveloperName>CreatorSmallPhotoUrl</externalDeveloperName>
        <label>Url of Creator&apos;s Thumbnail Photo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Satisfaction_Score_c__c</fullName>
        <externalDeveloperName>Customer_Satisfaction_Score__c</externalDeveloperName>
        <label>Customer Satisfaction Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Type_c__c</fullName>
        <externalDeveloperName>Customer_Type__c</externalDeveloperName>
        <label>Customer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_emoticon_c__c</fullName>
        <externalDeveloperName>Customer_emoticon__c</externalDeveloperName>
        <label>Customer emoticon</label>
        <length>1300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_emoticon_value_c__c</fullName>
        <externalDeveloperName>Customer_emoticon_value__c</externalDeveloperName>
        <label>Customer emoticon value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Case_Duration_Hours_c__c</fullName>
        <externalDeveloperName>DB_Case_Duration_Hours__c</externalDeveloperName>
        <label>DB Case Duration Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DB_Hours_c__c</fullName>
        <externalDeveloperName>DB_Hours__c</externalDeveloperName>
        <label>DB Hours</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateTime_Closed_c_c__c</fullName>
        <externalDeveloperName>DateTime_Closed_c__c</externalDeveloperName>
        <label>DateTime Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateTime_Opened_c_c__c</fullName>
        <externalDeveloperName>DateTime_Opened_c__c</externalDeveloperName>
        <label>DateTime Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Demand_For_Feature_c__c</fullName>
        <externalDeveloperName>Demand_For_Feature__c</externalDeveloperName>
        <label>Demand For Feature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <externalDeveloperName>Description</externalDeveloperName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duration_c__c</fullName>
        <externalDeveloperName>Duration__c</externalDeveloperName>
        <label>Duration (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM_DB_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>EDY_ORGCUSTOM__DB__c</externalDeveloperName>
        <label>DB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM_Old_Description_c__c</fullName>
        <externalDeveloperName>EDY_ORGCUSTOM__Old_Description__c</externalDeveloperName>
        <label>Old Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM_Old_Subject_c__c</fullName>
        <externalDeveloperName>EDY_ORGCUSTOM__Old_Subject__c</externalDeveloperName>
        <label>Old Subject</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engineering_Review_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Engineering_Review__c</externalDeveloperName>
        <label>Engineering Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EntitlementId__c</fullName>
        <externalDeveloperName>EntitlementId</externalDeveloperName>
        <label>Entitlement ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID_c__c</fullName>
        <externalDeveloperName>External_ID__c</externalDeveloperName>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature_Description_c__c</fullName>
        <externalDeveloperName>Feature_Description__c</externalDeveloperName>
        <label>Feature Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Feature_Request_Date_c__c</fullName>
        <externalDeveloperName>Feature_Request_Date__c</externalDeveloperName>
        <label>Feature Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Call_Response_Time_mins_c__c</fullName>
        <externalDeveloperName>First_Call_Response_Time_mins__c</externalDeveloperName>
        <label>First Call Response Time (mins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hardware_c__c</fullName>
        <externalDeveloperName>Hardware__c</externalDeveloperName>
        <label>Hardware</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasCommentsUnreadByOwner__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>HasCommentsUnreadByOwner</externalDeveloperName>
        <label>New Self-Service Comment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasSelfServiceComments__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>HasSelfServiceComments</externalDeveloperName>
        <label>Self-Service Commented</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsClosedOnCreate__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsClosedOnCreate</externalDeveloperName>
        <label>Closed When Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsClosed</externalDeveloperName>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsEscalated__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsEscalated</externalDeveloperName>
        <label>Escalated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSelfServiceClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsSelfServiceClosed</externalDeveloperName>
        <label>Closed by Self-Service User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsStopped__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsStopped</externalDeveloperName>
        <label>Stopped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsVisibleInSelfService__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsVisibleInSelfService</externalDeveloperName>
        <label>Visible in Self-Service Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KB_Article_Attached_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>KB_Article_Attached__c</externalDeveloperName>
        <label>KB Article Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate__c</fullName>
        <externalDeveloperName>LastReferencedDate</externalDeveloperName>
        <label>Last Referenced Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastViewedDate__c</fullName>
        <externalDeveloperName>LastViewedDate</externalDeveloperName>
        <label>Last Viewed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Payment_c__c</fullName>
        <externalDeveloperName>Last_Payment__c</externalDeveloperName>
        <label>Last Payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MilestoneStatus__c</fullName>
        <externalDeveloperName>MilestoneStatus</externalDeveloperName>
        <label>Milestone Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operating_System_c__c</fullName>
        <externalDeveloperName>Operating_System__c</externalDeveloperName>
        <label>Operating System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Cust_Case_ID_c__c</fullName>
        <externalDeveloperName>Org_Cust_Case_ID__c</externalDeveloperName>
        <label>Org Cust Case ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <externalDeveloperName>Origin</externalDeveloperName>
        <label>Case Origin</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <externalDeveloperName>OwnerId</externalDeveloperName>
        <label>Owner ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <externalDeveloperName>ParentId</externalDeveloperName>
        <label>Parent Case ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Billing_c__c</fullName>
        <externalDeveloperName>Payment_Billing__c</externalDeveloperName>
        <label>Payment Billing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <externalDeveloperName>Priority</externalDeveloperName>
        <label>Priority</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Problem_c__c</fullName>
        <externalDeveloperName>Problem__c</externalDeveloperName>
        <label>Problem</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family_KB_c__c</fullName>
        <externalDeveloperName>Product_Family_KB__c</externalDeveloperName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuestionId__c</fullName>
        <externalDeveloperName>QuestionId</externalDeveloperName>
        <label>Question ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <externalDeveloperName>Reason</externalDeveloperName>
        <label>Case Reason</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypeId__c</fullName>
        <externalDeveloperName>RecordTypeId</externalDeveloperName>
        <label>Record Type ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Round_Robin_ID_c__c</fullName>
        <externalDeveloperName>Round_Robin_ID__c</externalDeveloperName>
        <label>Round Robin ID</label>
        <length>1300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SendArticleEmail_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>SendArticleEmail__c</externalDeveloperName>
        <label>SendArticleEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Email_Trigger_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Send_Email_Trigger__c</externalDeveloperName>
        <label>Send Email Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping_Method_c__c</fullName>
        <externalDeveloperName>Shipping_Method__c</externalDeveloperName>
        <label>Shipping Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Number_c__c</fullName>
        <externalDeveloperName>Shipping_Number__c</externalDeveloperName>
        <label>Track It</label>
        <length>1300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SlaExitDate__c</fullName>
        <externalDeveloperName>SlaExitDate</externalDeveloperName>
        <label>Entitlement Process End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SlaStartDate__c</fullName>
        <externalDeveloperName>SlaStartDate</externalDeveloperName>
        <label>Entitlement Process Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SlickSidebar_Tab_Name_c__c</fullName>
        <externalDeveloperName>SlickSidebar_Tab_Name__c</externalDeveloperName>
        <label>SlickSidebar Tab Name</label>
        <length>1300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source_Partner_c__c</fullName>
        <externalDeveloperName>Source_Partner__c</externalDeveloperName>
        <label>Source</label>
        <length>1300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source_c__c</fullName>
        <externalDeveloperName>Source__c</externalDeveloperName>
        <label>Source</label>
        <length>1300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status_Indicator_c__c</fullName>
        <externalDeveloperName>Status_Indicator__c</externalDeveloperName>
        <label>Indicator</label>
        <length>1300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <externalDeveloperName>Status</externalDeveloperName>
        <label>Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StopStartDate__c</fullName>
        <externalDeveloperName>StopStartDate</externalDeveloperName>
        <label>Stopped Since</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sub_Type_c__c</fullName>
        <externalDeveloperName>Sub_Type__c</externalDeveloperName>
        <label>Sub-Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <externalDeveloperName>Subject</externalDeveloperName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SuppliedCompany__c</fullName>
        <externalDeveloperName>SuppliedCompany</externalDeveloperName>
        <label>Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SuppliedEmail__c</fullName>
        <externalDeveloperName>SuppliedEmail</externalDeveloperName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SuppliedName__c</fullName>
        <externalDeveloperName>SuppliedName</externalDeveloperName>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SuppliedPhone__c</fullName>
        <externalDeveloperName>SuppliedPhone</externalDeveloperName>
        <label>Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>System Modstamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tied_to_revenue_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Tied_to_revenue__c</externalDeveloperName>
        <label>Tied to revenue?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tracking_ID_c__c</fullName>
        <externalDeveloperName>Tracking_ID__c</externalDeveloperName>
        <label>Tracking ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <externalDeveloperName>Type</externalDeveloperName>
        <label>Case Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UMCustomer_emoticon_c__c</fullName>
        <externalDeveloperName>UMCustomer_emoticon__c</externalDeveloperName>
        <label>Customer emoticon</label>
        <length>1300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UMCustomer_emoticon_value_c__c</fullName>
        <externalDeveloperName>UMCustomer_emoticon_value__c</externalDeveloperName>
        <label>Customer emoticon value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UMgeolocalization_Latitude_s__c</fullName>
        <externalDeveloperName>UMgeolocalization__Latitude__s</externalDeveloperName>
        <label>Customer Geolocalization (Latitude)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UMgeolocalization_Longitude_s__c</fullName>
        <externalDeveloperName>UMgeolocalization__Longitude__s</externalDeveloperName>
        <label>Customer Geolocalization (Longitude)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>URLsrc_c__c</fullName>
        <externalDeveloperName>URLsrc__c</externalDeveloperName>
        <label>URLsrc</label>
        <length>1300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Value_of_Deal_c__c</fullName>
        <externalDeveloperName>Value_of_Deal__c</externalDeveloperName>
        <label>Value of Deal</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cv_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>cv__c</externalDeveloperName>
        <label>cv</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pkbgeolocalization_Latitude_s__c</fullName>
        <externalDeveloperName>pkbgeolocalization__Latitude__s</externalDeveloperName>
        <label>Customer Geolocalization (Latitude)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pkbgeolocalization_Longitude_s__c</fullName>
        <externalDeveloperName>pkbgeolocalization__Longitude__s</externalDeveloperName>
        <label>Customer Geolocalization (Longitude)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter_Author_External_Id_c__c</fullName>
        <externalDeveloperName>sf4twitter__Author_External_Id__c</externalDeveloperName>
        <label>Author External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter_Twitter_Username_c__c</fullName>
        <externalDeveloperName>sf4twitter__Twitter_Username__c</externalDeveloperName>
        <label>Author Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter_twitterId_c__c</fullName>
        <externalDeveloperName>sf4twitter__twitterId__c</externalDeveloperName>
        <label>Conversation External Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>SF2SFCase</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Type__c</columns>
        <columns>Case_Area_c__c</columns>
        <columns>Origin__c</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>Reason__c</columns>
        <columns>CreatedDate__c</columns>
        <columns>AccountId__c</columns>
        <columns>Customer_Type_c__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>SF2SFCases</pluralLabel>
</CustomObject>